fixed overflow on exteremly small screens (landscape), reworked idex divs

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@ section {
   height: 100vh;
   scroll-snap-align: start;
   scroll-snap-stop: always;
+  overflow: auto;
 }
